# Tadpole-Tracker-Cpp

./: .gitignore  Animal.cpp  Animal.h  CMakeLists.txt  CircularPointsQueue.cpp  CircularPointsQueue.h  README.md  main.cpp
src/: Animal.cpp  Animal.hpp  CircularPointsQueue.cpp  CircularPointsQueue.h  animal.cpp  animal.h  circular_queue.cpp  circular_queue.h
src/util/: bounding_box.h  circular_buffer.cpp  circular_buffer.h  circular_queue.cpp  circular_queue.h  detections_parser.cpp  detections_parser.h
src/yolo/: yolo_container.cpp  yolo_container.h
test/: testCircularPointsQueue.cpp  testCircularPointsQueue.h  testCircularPointsQueue.hpp  test_circular_buffer.cpp  test_circular_buffer.h  test_circular_queue.cpp  test_circular_queue.h
